adding editor config and changing